Minor I18n fix, added some padding to empty_list labels

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,6 +87,10 @@ html, body {
   margin-top: auto;
 }
 
+.empty_list {
+  padding: 15px;
+}
+
 /* Recolour the navbar */
 .navbar {
   background-color: $brand-custom;
