--- a/app/views/appliances/index.html.erb
+++ b/app/views/appliances/index.html.erb
@@ -7,7 +7,7 @@
   <div class="panel-body panel-table">
 
     <% if @appliances.length == 0 %>
-      <p><%= t('appliance.index.empty_list') %></p>
+      <p class="empty_list"><%= t('appliance.index.empty_list') %></p>
     <% else %>
     	<div class="table-responsive">
       	<table class="table table-condensed table-striped">
