--- a/app/views/history/index.html.erb
+++ b/app/views/history/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-body panel-table">
     <% if @history.length == 0 %>
-      <p><%= t('history.index.empty_list') %></p>
+      <p class="empty_list"><%= t('history.index.empty_list') %></p>
     <% else %>
       <table class="table table-condensed table-striped">
         <thead>
