--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-body panel-table">
   	<% if @broadcasts.length == 0 %>
-  	  <p><%= t('broadcast.index.empty_list') %></p>
+  	  <p class="empty_list"><%= t('broadcast.index.empty_list') %></p>
   	<% else %>
   		<div class="table-responsive">
   			<table class="table table-condensed table-striped">
