--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-body panel-table">
     <% if @classifications.length == 0 %>
-      <p><%= t('classes.index.empty_list') %></p>
+      <p class="empty_list"><%= t('classes.index.empty_list') %></p>
     <% else %>
     	<div class="table-responsive">
     	<table class="table table-condensed table-striped">
