--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-body panel-table">
     <% if @entries.length == 0 %>
-      <p><%= t('entry.index.empty_list') %></p>
+      <p class="empty_list"><%= t('entry.index.empty_list') %></p>
     <% else %>
       <div class="table-responsive">
         <table class="table table-condensed table-striped table-hover">
