--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -13,7 +13,7 @@
       <%= f.hidden_field :company, :value => session[:company] %>
     </div>
     <div class="panel-footer">
-      <%= f.submit t('invoice.new.button'), data: { disable_with: t('invoice.new.button_send') }, 'onclick' => '$(\'.loading-spinner\').css(\'display\', \'inline-block\');' %>
+      <%= f.submit t('invoice.new.button'), data: { disable_with: t('invoice.new.button_send') }, 'onclick' => 'addLoadingSpinner()' %>
     </div>
   </div>
 <% end %>
