--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,12 +8,15 @@
           <Strong><%= t('home.index.guest') %></strong><%= t('home.index.guest_msg') %>
         </div>
       <% end %>
-      <% @roles.each do |role| %>
+      <% @roles.each_with_index do |role, index| %>
         <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' or (role.name == 'guest' and current_user.staff?) %>
           <div class="col-xs-6 col-sm-3">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4><%= role.name.titleize %></h4>
+                <div class="simple_stats">
+                <%= "#{@simple_stats[index][0]} #{'entry'.pluralize(@simple_stats[index][0])}, #{@simple_stats[index][1]} #{'invoice'.pluralize(@simple_stats[index][1])}"%>
+                </div>
               </div>
               <div class="list-group">
                 <%= link_to(t('home.index.entries'), entries_path(company: role.name), :class => 'list-group-item') %>
