--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,29 +8,27 @@
           <Strong><%= t('home.index.guest') %></strong><%= t('home.index.guest_msg') %>
         </div>
       <% end %>
-      <% @roles.each_with_index do |role, index| %>
-        <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' or (role.name == 'guest' and current_user.staff?) %>
-          <div class="col-xs-6 col-sm-3">
+      <% @companies.each_with_index do |company, index| %>
+        <div class="col-xs-6 col-sm-3">
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h4><%= role.name.titleize %></h4>
+                <h4><%= company.title %></h4>
                 <div class="simple_stats">
                 <%= "#{@simple_stats[index][0]} #{'entry'.pluralize(@simple_stats[index][0])}, #{@simple_stats[index][1]} #{'invoice'.pluralize(@simple_stats[index][1])}"%>
                 </div>
               </div>
               <div class="list-group">
-                <%= link_to(t('home.index.entries'), entries_path(company: role.name), :class => 'list-group-item') %>
-                <%= link_to(t('home.index.invoices'), invoices_path(company: role.name), :class => 'list-group-item') %>
+                <%= link_to(t('home.index.entries'), company_entries_path(company.id), :class => 'list-group-item') %>
+                <%= link_to(t('home.index.invoices'), company_invoices_path(company.id), :class => 'list-group-item') %>
                 <% if can? :manage, Stats %>
-                  <%= link_to(t('home.index.stats'), stats_path(company: role.name), :class => 'list-group-item') %>
+                  <%= link_to(t('home.index.stats'), company_stats_path(company.id), :class => 'list-group-item') %>
                 <% end %>
                 <% if can? :create, Entry %>
-                  <%= link_to(t('home.index.batch'), batch_path(company: role.name), :class => 'list-group-item') %>
+                  <%= link_to(t('home.index.batch'), batch_path(company.id), :class => 'list-group-item') %>
                 <% end %>
               </div>
             </div>
           </div>
-        <% end %>
       <% end %>
     <% else %>
       <%= "#{t('home.batch.no_company')}<a href=\"mailto:#{ENV['ADMIN_EMAIL']}\">#{t('home.batch.no_company_anchor')}</a>" %>
