--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -210,7 +210,7 @@ a span:hover {
   display:inline-block;
   height:11px;
   width:16px;
-  background: url(/badger/assets/images/flags.png)  no-repeat;
+  background: url(flags.png)  no-repeat;
 }
 
 .nlflag {
